[package]
name = "flappy-barb"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
         "bevy_asset",
         "bevy_audio",
         "bevy_winit",
         "bevy_core_pipeline",
         "bevy_sprite",
         "bevy_text",
         "bevy_ui",
         "png",
         "vorbis",
         "x11"
]


[profile.release]
lto = "thin"
opt-level = "s"

[features]
unix_assets = []
local_unix_assets = []
